test/sema/assignment-to-dereferenced-immutable.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

extern def calloc(count: uint64, size: uint64): void*;

def main() {
    var buffer = cast<int*>(calloc(1, 8));
    // CHECK: [[@LINE+1]]:13: error: cannot assign to immutable expression
    *buffer = 41;
}
